2010-10-02  Janus Weil  <janus@gcc.gnu.org>

PR fortran/45748
	* resolve.c (resolve_formal_arglist): Avoid setting default type for
	formal arguments of intrinsic procedures.

2010-10-02  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/45748
	* gfortran.dg/intrinsic_6.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@164901 138bc75d-0d04-0410-961f-82ee72b054a4